@@ -54,6 +54,8 @@ PIG-4333: Split BigData tests into multiple groups (rohini)
  
 BUG FIXES
 
+PIG-4448: AvroMapWrapper leaks Avro data types when the map values are complex avro records (rdsr via daijy)
+
 PIG-4453: Remove test-tez-local target (daijy)
 
 PIG-4443: Write inputsplits in Tez to disk if the size is huge and option to compress pig input splits (rohini)
